# coldtrace

./: CMakeLists.txt  README.md
src/: writer.c
test/: CMakeLists.txt
test/checkers/: trace_checker.c
